[package]
name = "rkill"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
env_logger = "0.8.3"
psutil = "3.2.0"
rand = "0.8.3"
serde = "1.0.123"
serde_json = "1.0.62"
skim = "0.9.4"
structopt = "0.3.21"
sysinfo = "0.16.3"
termion = "1.5.6"
